📝 [ADD] cambios en las etiquetas meta e incorporacion del favicon

--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="author" content="Walter Osvaldo Gonzalez, Leonardo Emanuel Recalde, María Valentina Palazzo Lobo, Fernando Miguel Valdivia, Joaquin Tomas Herrero Santamarina, Isaías Gius, Mauro Coniglio">
+    <meta name="author" content="Walter Osvaldo Gonzalez, Fernando Miguel Valdivia, Joaquin Tomas Herrero Santamarina, Isaías Gius, Mauro Coniglio">
     <meta name="description" content="hotel sol de san javier, resort & spa. 4 estrellas. Tucumán, Argentina.">
     <meta name="keywords" content="hotel, San Javier, Tucumán, resort, spa, descanso, vacaciones">
+    <link rel="icon" href="./src/assets/logo.png" type="image/x-icon">
     <title>Hotel Sol de San Javier</title>
   </head>
   <body>
